objects/SFDC_Volunteer_Event__c.object
<CustomObject>
    <fields>
        <fullName>Session_1_End_Time__c</fullName>
        <label>Session #1 End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:45 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:15 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:45 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:15 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:45 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:15 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_1_Start_Time__c</fullName>
        <label>Session #1 Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:45 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:15 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:45 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:15 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:45 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:15 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_2_End_Time__c</fullName>
        <label>Session #2 End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:45 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:15 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:45 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:15 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:45 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:15 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_2_Start_Time__c</fullName>
        <label>Session #2 Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:45 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:15 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:45 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:15 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:45 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:15 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_3_End_Time__c</fullName>
        <label>Session #3 End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:45 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:15 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:45 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:15 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:45 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:15 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_3_Start_Time__c</fullName>
        <label>Session #3 Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:45 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:15 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:45 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:15 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:45 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:15 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Address_Same_as_Meeting_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the shipping address is different than the meeting address enter the address on the meeting record.</inlineHelpText>
        <label>Shipping Address Same as Meeting Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Type__c</fullName>
        <label>Shipping Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Contact</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <formula>&quot;USA&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>OE_Grouping__r.Situs_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Plan_Names__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sold Plan Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>TEXT(OE_Grouping__r.Source__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Comments__c</fullName>
        <description>(LG20140501)Consult dev team before modifying used in force.com site - This field is where the OE Coordinator adds special comments for the OE Ambassador when recruiting for the meeting</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Add comments for the OE Ambassador.</inlineHelpText>
        <label>Special Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submarket__c</fullName>
        <description>Submarket__c</description>
        <formula>OE_Grouping__r.Submarket__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submarket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Formula_Text__c</fullName>
        <formula>Submit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit Formula Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User checks box when meeting is ready for processing by OE</description>
        <inlineHelpText>Check this box when the meeting is ready for processing.</inlineHelpText>
        <label>Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Consultant_Cost__c</fullName>
        <formula>Hourly_Payout__c  +  Airfare__c  +  Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Consultant Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Facilitators_at_Meeting__c</fullName>
        <formula>(AE_Attending_Count__c +  AM_Attending_Count__c +  Ambassador_Count__c +  Contractor_Count__c +   Other_Associate_Count__c +  SAR_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Facilitators at Meeting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unable_to_secure_facilitator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box is checked when recruitment of a facilitator was unsuccessful</description>
        <label>Unable to secure facilitator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiting_on_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Facilitator Feedback has not been received</description>
        <label>Waiting on Facilitator Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_is_the_engagement_package__c</fullName>
        <label>What is the engagement package</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Get Strong</fullName>
                </value>
                <value>
                    <fullName>Get Control</fullName>
                </value>
                <value>
                    <fullName>Be Active</fullName>
                </value>
                <value>
                    <fullName>Take Charge</fullName>
                </value>
                <value>
                    <fullName>Total Health Total You</fullName>
                </value>
                <value>
                    <fullName>ASO Standard</fullName>
                </value>
                <value>
                    <fullName>ASO Enhanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Open Enrollment</label>
    <listViews>
        <fullName>Account_Review_grouping</fullName>
        <columns>Meeting_Status__c</columns>
        <columns>Meeting_Stage__c</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Meeting_Type__c</columns>
        <columns>Session_1_Start_Time__c</columns>
        <columns>Session_1_End_Time__c</columns>
        <columns>Recruitment_of_Facilitator_Needed__c</columns>
        <columns>Facilitator_Secured__c</columns>
        <columns>Facilitator1__c</columns>
        <columns>Meeting_Street__c</columns>
        <columns>Meeting_City__c</columns>
        <columns>Meeting_State__c</columns>
        <columns>Meeting_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OE_Grouping__c</field>
            <operation>equals</operation>
            <value>Davita OE Meetings</value>
        </filters>
        <label>Account Review – grouping</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>API User</value>
        </filters>
        <filters>
            <field>Meeting_Stage__c</field>
            <operation>equals</operation>
            <value>SUBMITTED</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Materials_Orders_Tracking</fullName>
        <columns>Account_Region__c</columns>
        <columns>Meeting_Type__c</columns>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Materials_Needed__c</columns>
        <columns>Materials_Order_On_Standby__c</columns>
        <columns>Materials_Order_placed__c</columns>
        <columns>Materials_Delivered__c</columns>
        <columns>Meeting_Stage__c</columns>
        <columns>Meeting_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Materials_Order_placed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2019</value>
        </filters>
        <filters>
            <field>Materials_Delivered__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Materials Orders - Tracking</label>
    </listViews>
    <listViews>
        <fullName>OE_Coordinator_Review</fullName>
        <columns>Meeting_Status__c</columns>
        <columns>Meeting_Stage__c</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Meeting_Type__c</columns>
        <columns>Session_1_Start_Time__c</columns>
        <columns>Session_1_End_Time__c</columns>
        <columns>Recruitment_of_Facilitator_Needed__c</columns>
        <columns>Facilitator_Secured__c</columns>
        <columns>Facilitator1__c</columns>
        <columns>Meeting_Street__c</columns>
        <columns>Meeting_City__c</columns>
        <columns>Meeting_State__c</columns>
        <columns>Meeting_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OE_Coordinator_Contact__c</field>
            <operation>equals</operation>
            <value>Colleen Jacobs</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2018</value>
        </filters>
        <label>OE Coordinator Review</label>
    </listViews>
    <listViews>
        <fullName>Recruitment_Tracking</fullName>
        <columns>Account_Name__c</columns>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Recruitment_of_Facilitator_Needed__c</columns>
        <columns>Facilitator_Being_Recruited__c</columns>
        <columns>Facilitator_Secured__c</columns>
        <columns>Facilitator1__c</columns>
        <columns>Facilitator_Two__c</columns>
        <columns>Facilitator_Three__c</columns>
        <columns>Waiting_on_Feedback__c</columns>
        <columns>Facilitator_Feedback_Received__c</columns>
        <columns>Special_Comments__c</columns>
        <columns>Meeting_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facilitator_Being_Recruited__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2019</value>
        </filters>
        <label>Recruitment Tracking</label>
    </listViews>
    <listViews>
        <fullName>Sales_Open_Enrollment_Grid</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Meeting_City__c</columns>
        <columns>Meeting_State__c</columns>
        <columns>Meeting_Zip_Code__c</columns>
        <columns>Materials_Needed__c</columns>
        <columns>Recruitment_of_Facilitator_Needed__c</columns>
        <columns>Facilitator1__c</columns>
        <columns>Reason_for_Update__c</columns>
        <columns>Meeting_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sales - Open Enrollment Grid</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Enrollment</pluralLabel>
    <recordTypes>
        <fullName>OE_Kit</fullName>
        <active>true</active>
        <description>OE Kit dedicated record type</description>
        <label>OE Kit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Enrollment</fullName>
        <active>true</active>
        <description>Open enrollment dedicated record type</description>
        <label>Open Enrollment</label>
    </recordTypes>
</CustomObject>